feat: enhance SEO and add og meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="canonical" href="https://mcbookshelf.dev/" />
+    <title>Bookshelf Manager – Modular Minecraft Datapack Library</title>
+    <meta name="description" content="Bookshelf Manager is the official tool for browsing the Bookshelf Minecraft datapack library. Select modules and download a bundled pack in one click." />
+    <meta property="og:title" content="Bookshelf Manager" />
+    <meta property="og:description" content="The official tool for browsing the Bookshelf Minecraft datapack library." />
+    <meta property="og:image" content="%sveltekit.assets%/bookshelf-og.jpg" />
+    <meta property="og:url" content="https://mcbookshelf.dev/" />
+    <meta property="og:type" content="website" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
