feat: use absolute URL for og:image and update README

--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Bookshelf Manager is the official tool for browsing the Bookshelf Minecraft datapack library. Select modules and download a bundled pack in one click." />
     <meta property="og:title" content="Bookshelf Manager" />
     <meta property="og:description" content="The official tool for browsing the Bookshelf Minecraft datapack library." />
-    <meta property="og:image" content="%sveltekit.assets%/bookshelf-og.jpg" />
+    <meta property="og:image" content="https://mcbookshelf.dev/bookshelf-og.jpg" />
     <meta property="og:url" content="https://mcbookshelf.dev/" />
     <meta property="og:type" content="website" />
     %sveltekit.head%
